--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           expo-version: latest
           eas-version: latest
-          token: $(( secrets.EXPO_TOKEN ))
+          token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Build on EAS
         run: eas build --profile preview -p android --local --non-interactive
