--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: reactnativecommunity/react-native-android
+    container: 
+      image: reactnativecommunity/react-native-android
+      options: --user root
     steps:
       - name: 📚 Checkout
         uses: actions/checkout@v3
