--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: 
-      image: reactnativecommunity/react-native-android
-      options: --user root
     steps:
       - name: 📚 Checkout
         uses: actions/checkout@v3
@@ -20,10 +17,18 @@ jobs:
           expo-version: latest
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: npm
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+          architecture: x64 # (x64 or x86) - defaults to x64
       - name: Install Dependencies
         run: npm ci
-      # Run lints after building ci is configured 
-      # - name: Run all lints
-      #   run: npm run lint
       - name: Build on EAS
         run: EAS_NO_VCS=1 eas build --profile preview -p android --local --non-interactive
