--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: expo-ci.apk
-          path: /home/runner/work/expo-ci/expo-ci/*.apk
+          path: /home/runner/work/expo-ci/expo-ci/android/app/build/outputs/apk/release/app-release.apk
